--- a/config/TimeMixerPP_SCAT.yaml
+++ b/config/TimeMixerPP_SCAT.yaml
@@ -80,7 +80,7 @@ model:
     n_output_features: 3   # Number of output features (lat, lon, alt)
     max_n_patches: 300     # Maximum number of patches for positional encoding
     context_length: 320    # Maximum context length (20 patches * 16 timesteps)
-    pos_encoding_type: "learnable"  # "learnable" or "sinusoidal"
+    pos_encoding_type:     # None (no positional encoding) or "learnable" or "sinusoidal"
     patch_nan_tolerance_percentage: 0.5  # Tolerance for nan values in patches
 
 training:
