--- a/config/PatchTransformer_SCAT.yaml
+++ b/config/PatchTransformer_SCAT.yaml
@@ -51,19 +51,17 @@ data:
 model:
   class_path: "src.models.PatchTransformerForecaster.PatchTransformerForecaster"
   patch_transformer_params:
-    patch_len: 16          # Length of each patch (subseries length)
+    patch_len: ${transformations.patching.params.patch_len} # Length of each patch (subseries length)
     d_model: 128           # Model dimension (smaller due to patch efficiency)
     n_heads: 16            # Number of attention heads (PatchTST uses 16)
     n_layers: 3            # Number of transformer layers (fewer needed with patches)
     d_ff: 256              # Feed-forward dimension (2x d_model typical)
     dropout: 0.2           # Dropout rate
     activation: "gelu"     # Activation function (GELU as in PatchTST)
-    n_input_features: 5    # Number of input features (lat, lon, alt, vx, vy) - not including timestamp
-    n_output_features: 3   # Number of output features (lat, lon, alt)
-    max_n_patches: 300     # Maximum number of patches for positional encoding
-    context_length: 320    # Maximum context length (20 patches * 16 timesteps)
+    n_input_features: ${eval:'len(${data.input_features}) - 1'}    # Number of input features (lat, lon, alt, vx, vy) - not including timestamp
+    n_output_features: ${eval:'len(${data.output_features})'}   # Number of output features (lat, lon, alt)
+    max_n_patches: ${eval:'${transformations.padding.params.max_len} // ${transformations.patching.params.patch_len} + 1'}     # Maximum number of patches for positional encoding
     pos_encoding_type: "learnable"  # "learnable" or "sinusoidal"
-    patch_nan_tolerance_percentage: 0.5  # Tolerance for nan values in patches
 
 training:
   batch_size: 4
