--- a/config/PatchTransformer_SCAT.yaml
+++ b/config/PatchTransformer_SCAT.yaml
@@ -66,7 +66,7 @@ training:
   batch_size: 4
   
   # Training parameters
-  max_epochs: 2
+  max_epochs: 5
   learning_rate: 0.0001     # PatchTST uses 1e-4
   weight_decay: 0.01        # L2 regularization as in PatchTST
   gradient_clip_val: 1.0
@@ -82,7 +82,8 @@ training:
 logging:  # Logs both batch and epoch levels, loss is alwayes logged
   train: ['mse', 'rmse', 'mae', 'detection_accuracy']
   val: ['mse', 'rmse', 'mae', 'detection_accuracy']
-  test: ['mse', 'rmse', 'mae', 'detection_accuracy_pred']
+  test: ['mse', 'rmse', 'mae', 'detection_accuracy']
+  detect: ['detection_accuracy_pred']
 
 debug:
   activate: true
