--- a/config/Toto_SCAT.yaml
+++ b/config/Toto_SCAT.yaml
@@ -1,5 +1,5 @@
 project:
-  experiment_name: "SCAT_Toto"
+  experiment_name: "SCAT_Toto_debug"
   run_name: "run1"
   seed: 123
 
@@ -8,11 +8,11 @@ paths:  # main relative paths
   mlflow_uri: "./mlruns"
   checkpoint_dir: "./models"
   predictions_dir: "./predictions"
-  track_anomaly_annotations_filepath: "./datasets/track_anomaly_annotations.csv"
+  track_anomaly_annotations_filepath: "./sandbox/track_anomaly_annotations.csv"
 
 compute:
   accelerator: "gpu"
-  devices: [1, ]
+  devices: [1,]
   train_num_workers: 4
   validation_num_workers: 1
   test_num_workers: 1
@@ -29,7 +29,7 @@ transformations:
     params:
       type_: "linear_interpolation"
       time_interval: 5  # seconds
-      error_tolerance: 1  # seconds 
+      error_tolerance: 2  # seconds 
   imputation:
     class_path: "src.objects.ImputationTransform.ImputationTransform"
     params:
@@ -52,7 +52,7 @@ data:
 
 model:
   class_path: "src.models.TotoWrapper.TotoWrapper"
-  anomaly_threshold: 0.99
+  anomaly_percentile: 0.99
   toto_params:
     from_pretrained: "/home/sharonpe/ImpostAir/models/toto/models--Datadog--Toto-Open-Base-1.0/snapshots/a5befbff72062da2cca2322a227f4fe3edf8e32f"
     # from_pretrained: "Datadog/Toto-Open-Base-1.0"
@@ -76,8 +76,8 @@ training:
 
 logging:  # Logs both batch and epoch levels, loss is alwayes logged
   forcasting_metrics: ['mse', 'rmse', 'mae'] # both batch and epoch levels, logged by lightning
-  anomaly_detection_metrics: ['track_anomaly_detection_accuracy', ]  # epoch level only, logged manually
+  anomaly_detection_metrics: ['track_AD_accuracy', ]  # epoch level only, logged manually
 
 debug:
-  activate: False
-  # sample_size: 30
+  activate: True
+  sample_size: 30
